fixing problems with transparent mode function

--- a/index.html
+++ b/index.html
@@ -24,10 +24,10 @@
     <main>
         <section class="main__section">
             <div id="mi-meme">
-                <h2 class="main__h2 main__top main__div--black main__blackTop">top text</h2>
-                <div src alt class="main__div--center">
+                <div class="main__h2 main__top main__div--black main__blackTop">TOP TEXT</div>
+                <div class="main__div--center">
                 </div>
-                <h2 class="main__h2 main__bottom main__div--black main__blackBottom">bottom text</h2>
+                <div class="main__h2 main__bottom main__div--black main__blackBottom">BOTTOM TEXT</div>
             </div>
         <button class="main__button" id="download-meme"><i class="fa-solid fa-download"></i>descargar meme</button>
     </section>
@@ -100,13 +100,13 @@
                 <select class="aside__box" name="fonts" id="fonts">
                     <option value="Arial">arial</option>
                     <option value="Arial Narrow Bold">arial black</option>
-                    <option value="americantypewriter">American Typerwriter</option>
-                    <option value="andalemono">Andale Mono</option>
-                    <option value="Open Sans">Comic Sanz MS</option>
-                    <option value="helvetica">Helvetica</option>
-                    <option value="impact">Impact</option>
-                    <option value="verdana">Verdana</option>
-                    <option value="timesnewroman">Times New Roman</option>
+                    <option value="American Typewriter">American Typerwriter</option>
+                    <option value="Andale Mono">Andale Mono</option>
+                    <option value="Comic Sans MS">Comic Sanz MS</option>
+                    <option value="Helvetica">Helvetica</option>
+                    <option value="Impact">Impact</option>
+                    <option value="Verdana">Verdana</option>
+                    <option value="Times New Roman">Times New Roman</option>
                 </select>
                     <div class="aside__div--button">
                         <input class="aside__box aside__select" type="number" id="fontPx"value="40">
